# base

./: .gitignore  .gitmodules  LICENSE  README.md  package-lock.json  package.json
apps/apple/Base/: Base WatchKit Extension-Bridging-Header.h  README.MD
apps/apple/Base/Base WatchKit AppTests/: Base_WatchKit_AppTests.swift
apps/apple/Base/Base WatchKit AppUITests/: Base_WatchKit_AppUITests.swift  Base_WatchKit_AppUITestsLaunchTests.swift
apps/apple/Base/Base WatchKit Extension/: Info.plist  NotificationView.swift
apps/apple/Base/Base.xcodeproj/: project.pbxproj
apps/apple/Base/BaseUITests/: BaseUITests.swift
apps/ios/Artifact/: Artifact WatchKit Extension-Bridging-Header.h  Artifact-Bridging-Header.h  DetrendedFluctuation.cpp  DetrendedFluctuation.hpp  DetrendedFluctuationWrapper.h  DetrendedFluctuationWrapper.mm
apps/ios/Artifact/Artifact WatchKit AppTests/: Artifact_WatchKit_AppTests.swift
apps/ios/Artifact/Artifact WatchKit AppUITests/: Artifact_WatchKit_AppUITests.swift  Artifact_WatchKit_AppUITestsLaunchTests.swift
apps/ios/Artifact/Artifact WatchKit Extension/: ArtifactApp.swift  ContentView.swift  (+4 more)
apps/ios/Base/: Base WatchKit Extension-Bridging-Header.h  Base-Bridging-Header.h
apps/web/: README.md  index.html  package.json
apps/web/src/: App.vue  style.css
services/detrended-fluctuation/: DFA1.cpp  DFA1.hpp  DetrendedFluctuation  DetrendedFluctuation.cpp  DetrendedFluctuation.hpp  DetrendedFluctuation.py
services/dsp/: Makefile  main.cpp  main.py  pyproject.toml
services/dsp/mock/: Ruck1.csv
services/hrv/: HRV.cpp  HRV.hpp  README.md
(+63 files in other folders)
