[tool.poetry]
name = "dsp"
version = "0.1.0"
description = ""
authors = ["Shane Earley <shanejearley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "main.py"
